--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -37,6 +37,21 @@ a {
   width: -moz-fit-content;
   width: fit-content;
 }
+.app .layout .nav .cont .list .button {
+  background-color: white;
+  color: black;
+}
+@media (max-width: 1150px) {
+  .app .layout .nav .cont .list .button {
+    background-color: white;
+    color: black;
+    margin: 25px 0px;
+  }
+  .app .layout .nav .cont .list .button:hover {
+    background-color: white;
+    color: black;
+  }
+}
 .app .layout .nav .cont .list a {
   min-width: -moz-fit-content;
   min-width: fit-content;
@@ -44,10 +59,10 @@ a {
   padding: 10px 15px;
   border-radius: 3px;
   transition: all 0.3s ease-in;
+  color: silver;
 }
 .app .layout .nav .cont .list a.active {
-  color: black;
-  background-color: white;
+  color: white;
   cursor: default;
 }
 @media (max-width: 1150px) {
@@ -56,7 +71,7 @@ a {
   }
   .app .layout .nav .cont .list a {
     min-width: 100%;
-    padding: 5px;
+    padding: 10px;
     border-bottom: 1px solid silver;
     background: transparent;
   }
@@ -93,7 +108,7 @@ a {
   }
 }
 .app .layout .nav .cont .burger-cont .burger .line {
-  width: 25px;
+  width: 40px;
   height: 3px;
   background-color: white;
   transition: all 0.3s ease;
@@ -128,7 +143,7 @@ a {
   }
   .app .layout .nav .cont .list a {
     margin: 3px 0px;
-    padding: 10px 5px;
+    padding: 10px;
     max-width: -moz-fit-content;
     max-width: fit-content;
     text-align: start;
