--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -36,15 +36,30 @@ a{
                 justify-content: space-between;
                 width: fit-content;
 
+                .button{
+                    background-color: white;
+                    color: black;
+                    @media (max-width: 1150px) {
+                        background-color: white;
+                        color: black;
+                        margin: 25px 0px;
+
+                        &:hover{
+                            background-color: white;
+                            color: black;
+                        }
+                      }
+                }
+
                 a{
                     min-width: fit-content;
                     margin: 0px 15px;
                     padding: 10px 15px;
                     border-radius: 3px;
                     transition: all	.3s ease-in;
+                    color: silver;
                     &.active{
-                        color: black;
-                        background-color: white;
+                        color: white;
                         cursor: default;
                     }
                 }
@@ -54,7 +69,7 @@ a{
 
                     a{
                         min-width: 100%;
-                        padding: 5px;
+                        padding: 10px;
                         border-bottom: 1px solid silver;
                         background: transparent;
                         &:hover{
@@ -88,7 +103,7 @@ a{
                     }
                   
                     .line {
-                      width: 25px;
+                      width: 40px;
                       height: 3px;
                       background-color: white;
                       transition: all 0.3s ease;
@@ -122,7 +137,7 @@ a{
                     padding: 20px 0px;
                     a{
                         margin: 3px 0px;
-                        padding: 10px 5px;
+                        padding: 10px;
                         max-width: fit-content;
                         text-align: start;
                         user-select: none;
