--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,158 +1,180 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-a{
-    text-decoration: none;
-    color: white;
-    letter-spacing: 2px;
-    font-weight: 400;
-    text-transform: uppercase;
-    cursor: pointer;
-    user-select: none;
+a {
+  color: white;
+  text-decoration: none;
+  text-transform: capitalize;
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 400;
+  transition: all 0.3s ease-in;
 }
 
-.app{
-    .layout{
-        
-        .nav {
-            width: 100%;
-            background-color: black;
-            padding: 10px;
-            .cont {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              width: 100%;
-              padding: 5px 25px;
+.app {
+  .layout {
+    position: relative;
+    .wrapper {
+      background-image: url("/public/Icons/bg.jpg");
+      background-size: cover;
+      background-repeat: repeat-y;
+      position: absolute;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      filter: blur(10px);
+      z-index: -500;
+    }
+    .nav {
+      width: 100%;
 
-              .list{
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                justify-content: space-between;
-                width: fit-content;
+      padding: 10px;
+      .cont {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 5px 25px;
 
-                .button{
-                    background-color: white;
-                    color: black;
-                    @media (max-width: 1150px) {
-                        background-color: white;
-                        color: black;
-                        margin: 25px 0px;
+        .list {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          width: fit-content;
 
-                        &:hover{
-                            background-color: white;
-                            color: black;
-                        }
-                      }
-                }
-
-                a{
-                    min-width: fit-content;
-                    margin: 0px 15px;
-                    padding: 10px 15px;
-                    border-radius: 3px;
-                    transition: all	.3s ease-in;
-                    color: silver;
-                    &.active{
-                        color: white;
-                        cursor: default;
-                    }
-                }
-
-                @media (max-width: 1150px) {
-                    min-width: 100%;
-
-                    a{
-                        min-width: 100%;
-                        padding: 10px;
-                        border-bottom: 1px solid silver;
-                        background: transparent;
-                        &:hover{
-                            border-bottom: 1px solid white;
-                            background-color: rgb(40, 40, 40);
-                        }
-                        &.active{
-                            background: transparent;
-                        }
-                    }
-                }
-              }
-              .burger-cont {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                min-width: fit-content;
-                img{
-                    width: 50px;
-                }
-                .burger {
-                    display: none;
-                    flex-direction: column;
-                    cursor: pointer;
-                    gap: 5px;
-                    &:hover{
-                        cursor:pointer;
-                    }
-                    @media (max-width: 1150px) {
-                        display: flex;
-                    }
-                  
-                    .line {
-                      width: 40px;
-                      height: 3px;
-                      background-color: white;
-                      transition: all 0.3s ease;
-                      border-radius: 25px;
-                    }
-                    &.burger.open .line:nth-child(1) {
-                        transform: rotate(45deg) translate(6.5px, 6.5px) scale(120%);
-                    }
-                    
-                    &.burger.open .line:nth-child(2) {
-                        opacity: 0;
-                    }
-                    
-                    &.burger.open .line:nth-child(3) {
-                        transform: rotate(-45deg) translate(5px, -5px) scale(120%);
-                    }
-                  }
-                  @media (max-width: 1150px) {
-                    width: 100%;
-                  }
-              }
-              @media (max-width: 1150px) {
-                flex-direction: column;
-                align-items: flex-start;
-                .list{
-                    display: none;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    justify-content: space-between;
-                    list-style: none;
-                    padding: 20px 0px;
-                    a{
-                        margin: 3px 0px;
-                        padding: 10px;
-                        max-width: fit-content;
-                        text-align: start;
-                        user-select: none;
-                        &.active{
-                            color: white;
-                            background-color: rgb(40, 40, 40);
-                            border-bottom: 1px solid white;
-                        }
-                    }
-                    &.open{
-                        display: flex;
-                    }
-                }
+          a {
+            min-width: fit-content;
+            margin: 0px 30px;
+            color: grey;
+            border-radius: 2px;
+            &:hover {
+              color: black;
             }
+            &.active {
+              color: black;
+              cursor: default;
             }
           }
+
+          @media (max-width: 1150px) {
+            min-width: 100%;
+
+            a {
+              min-width: 100%;
+              padding: 5px;
+              border-bottom: 1px solid silver;
+
+              &:hover {
+                color: black;
+                border-bottom: 1px solid black;
+              }
+              &.active {
+                &:hover {
+                  color: black;
+                  border-bottom: 1px solid black;
+                }
+              }
+            }
+          }
+        }
+        .login {
+          padding: 20px 15px;
+          background-color: black;
+          color: white;
+          border-radius: 2px;
+
+          &:hover {
+            filter: brightness(1.5);
+          }
+          @media (max-width: 1150px) {
+            display: none;
+
+            &.open {
+              display: block;
+              width: 100%;
+            }
+          }
+        }
+        .burger-cont {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          min-width: fit-content;
+          img {
+            width: 50px;
+          }
+          .burger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            gap: 5px;
+            &:hover {
+              cursor: pointer;
+            }
+            @media (max-width: 1150px) {
+              display: flex;
+            }
+
+            .line {
+              width: 30px;
+              height: 3px;
+              background-color: black;
+              transition: all 0.3s ease;
+              border-radius: 25px;
+            }
+            &.burger.open .line:nth-child(1) {
+              transform: rotate(45deg) translate(6.5px, 6.5px) scale(120%);
+            }
+
+            &.burger.open .line:nth-child(2) {
+              opacity: 0;
+            }
+
+            &.burger.open .line:nth-child(3) {
+              transform: rotate(-45deg) translate(5px, -5px) scale(120%);
+            }
+          }
+          @media (max-width: 1150px) {
+            width: 100%;
+          }
+        }
+        @media (max-width: 1150px) {
+          flex-direction: column;
+          align-items: flex-start;
+          .list {
+            display: none;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: space-between;
+            list-style: none;
+            padding: 20px 0px;
+            a {
+              padding: 10px 10px;
+              margin: 3px 0px;
+              max-width: fit-content;
+              text-align: start;
+              user-select: none;
+              &:hover {
+                color: black;
+              }
+
+              &.active {
+                color: white;
+                background-color: black;
+              }
+            }
+            &.open {
+              display: flex;
+            }
+          }
+        }
+      }
     }
+  }
 }
