--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -27,7 +27,7 @@ a {
       left: 0;
       min-width: 100%;
       min-height: 100%;
-      filter: blur(10px);
+      filter: blur(5px);
       z-index: -500;
     }
     .nav {
@@ -174,6 +174,221 @@ a {
             }
           }
         }
+      }
+    }
+    .hero {
+      margin-top: 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      overflow-x: hidden;
+      width: 100%;
+      position: relative;
+      overflow-y: hidden;
+      color: white;
+      .wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-image: url("/public/Icons/hero.jpg");
+        background-size: cover;
+
+        width: 100%;
+        aspect-ratio: 16/9;
+        z-index: -100;
+        filter: blur(0px) brightness(0.8);
+      }
+
+      .text {
+        display: flex;
+        flex-direction: column;
+        margin-left: 25px;
+        width: fit-content;
+        width: 100%;
+        h1 {
+          letter-spacing: 2px;
+          font-size: 42px;
+          font-weight: 400;
+          margin: 20px 0px;
+          align-self: flex-start;
+        }
+        .services {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          padding: 0px 10%;
+          .services-list {
+            list-style: none;
+            width: 50%;
+            align-self: flex-start;
+            li {
+              letter-spacing: 2px;
+              margin: 25px auto;
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              text-wrap: nowrap;
+              font-size: 18px;
+              letter-spacing: 2px;
+              border: 2px solid white;
+              border-radius: 7px;
+              padding: 10px 0px;
+              cursor: default;
+              user-select: none;
+              img {
+                max-width: 25px;
+                margin-right: 5px;
+              }
+              @for $i from 1 through 4 {
+                &:nth-child(#{$i}) {
+                  padding-left: $i * 10%;
+                }
+              }
+            }
+          }
+        }
+        .featured {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          padding: 0px 10%;
+          position: relative;
+          overflow-y: hidden;
+          .cars {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            position: relative;
+            overflow-y: hidden;
+
+            .car {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              margin: 0px 50px;
+              img {
+                width: 100px;
+                aspect-ratio: 1/1;
+              }
+              p {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                font-size: 18px;
+                margin: 15px 10px;
+                letter-spacing: 2px;
+                line-height: 35px;
+                text-wrap: nowrap;
+                img {
+                  max-width: 25px;
+                  margin-right: 10px;
+                }
+              }
+            }
+          }
+        }
+      }
+      .hero-image {
+        transform: translateX(10%);
+        border-top-left-radius: 13px;
+        border-bottom-left-radius: 13px;
+        aspect-ratio: 1/1;
+        width: 40%;
+      }
+    }
+    .details {
+      display: flex;
+      flex-direction: column;
+      margin-top: 100px;
+      h1 {
+        text-align: center;
+        letter-spacing: 2px;
+        font-size: 52px;
+        font-weight: 400;
+        margin: 25px;
+      }
+      .process {
+        display: flex;
+        flex-direction: column;
+        padding: 0px 50px;
+
+        h1 {
+          text-align: start;
+          font-size: 42px;
+          letter-spacing: 2px;
+          font-weight: 400;
+        }
+        .process-list {
+          list-style: none;
+          font-size: 20px;
+          letter-spacing: 2px;
+
+          li {
+            margin: 15px 45px;
+          }
+        }
+      }
+      .customs,
+      .support {
+        display: flex;
+        flex-direction: column;
+        padding: 0px 50px;
+        h1 {
+          text-align: start;
+          font-size: 42px;
+          letter-spacing: 2px;
+          font-weight: 400;
+        }
+        p {
+          padding: 0px 45px;
+          font-size: 20px;
+          letter-spacing: 2px;
+        }
+      }
+    }
+    .footer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      background-color: black;
+      margin-top: 100px;
+      .line-break {
+        background-color: white;
+        width: 90%;
+        height: 2px;
+        margin: auto;
+      }
+
+      .social-media {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: 25px;
+        p {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          letter-spacing: 2px;
+          img {
+            width: 45px;
+            margin-right: 15px;
+          }
+        }
+      }
+      p {
+        color: white;
+        padding: 20px;
+        letter-spacing: 3px;
       }
     }
   }
