--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,16 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+// Trasnitions
+@keyframes slide-left {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 a {
   color: white;
   text-decoration: none;
@@ -32,7 +42,7 @@ a {
     }
     .nav {
       width: 100%;
-
+      user-select: none;
       padding: 10px;
       .cont {
         display: flex;
@@ -176,183 +186,363 @@ a {
         }
       }
     }
-    .hero {
-      margin-top: 50px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      overflow-x: hidden;
-      width: 100%;
-      position: relative;
-      overflow-y: hidden;
-      color: white;
-      .wrapper {
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-image: url("/public/Icons/hero.jpg");
-        background-size: cover;
-
-        width: 100%;
-        aspect-ratio: 16/9;
-        z-index: -100;
-        filter: blur(0px) brightness(0.8);
-      }
-
-      .text {
+    .home {
+      overflow: hidden;
+      .hero {
+        margin-top: 25px;
         display: flex;
-        flex-direction: column;
-        margin-left: 25px;
-        width: fit-content;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        overflow-x: hidden;
         width: 100%;
-        h1 {
-          letter-spacing: 2px;
-          font-size: 42px;
-          font-weight: 400;
-          margin: 20px 0px;
-          align-self: flex-start;
-        }
-        .services {
+        position: relative;
+        overflow: hidden;
+        color: black;
+        padding: 50px 0px;
+
+        .text {
           display: flex;
           flex-direction: column;
-          align-items: center;
-          justify-content: space-between;
+          margin-left: 25px;
+          width: fit-content;
           width: 100%;
-          padding: 0px 10%;
-          .services-list {
-            list-style: none;
-            width: 50%;
+          h1 {
+            letter-spacing: 2px;
+            font-size: 42px;
+            font-weight: 400;
+            margin: 20px 0px;
             align-self: flex-start;
-            li {
-              letter-spacing: 2px;
-              margin: 25px auto;
-              display: flex;
-              flex-direction: row;
-              align-items: center;
-              text-wrap: nowrap;
-              font-size: 18px;
-              letter-spacing: 2px;
-              border: 2px solid white;
-              border-radius: 7px;
-              padding: 10px 0px;
-              cursor: default;
-              user-select: none;
-              img {
-                max-width: 25px;
-                margin-right: 5px;
-              }
-              @for $i from 1 through 4 {
-                &:nth-child(#{$i}) {
-                  padding-left: $i * 10%;
-                }
-              }
-            }
           }
-        }
-        .featured {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: space-between;
-          width: 100%;
-          padding: 0px 10%;
-          position: relative;
-          overflow-y: hidden;
-          .cars {
+          .services {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             align-items: center;
             justify-content: space-between;
-            flex-wrap: wrap;
-            position: relative;
-            overflow-y: hidden;
-
-            .car {
-              display: flex;
-              flex-direction: column;
-              align-items: center;
-              margin: 0px 50px;
-              img {
-                width: 100px;
-                aspect-ratio: 1/1;
-              }
-              p {
+            width: 100%;
+            padding: 0px 10%;
+            .services-list {
+              list-style: none;
+              width: 100%;
+              align-self: flex-start;
+              li {
+                letter-spacing: 2px;
+                margin: 25px auto;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                font-size: 18px;
-                margin: 15px 10px;
-                letter-spacing: 2px;
-                line-height: 35px;
                 text-wrap: nowrap;
+                font-size: 18px;
+                letter-spacing: 2px;
+                border: 2px solid black;
+                border-radius: 7px;
+                padding: 10px 0px;
+                cursor: default;
+                user-select: none;
                 img {
                   max-width: 25px;
-                  margin-right: 10px;
+                  margin-right: 5px;
+                }
+                @for $i from 1 through 4 {
+                  &:nth-child(#{$i}) {
+                    padding-left: $i * 10%;
+                  }
+                }
+              }
+            }
+          }
+          .featured {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            padding: 0px 10%;
+            position: relative;
+            overflow-y: hidden;
+            .cars {
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              justify-content: center;
+              flex-wrap: wrap;
+
+              .car {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: 20px 25px;
+                display: flex;
+                img {
+                  width: 120px;
+                  aspect-ratio: 1/1;
+                }
+                p {
+                  display: flex;
+                  flex-direction: row;
+                  align-items: center;
+                  font-size: 18px;
+                  margin: 15px 10px;
+                  letter-spacing: 2px;
+                  line-height: 35px;
+                  text-wrap: nowrap;
+                  img {
+                    max-width: 25px;
+                    margin-right: 10px;
+                  }
                 }
               }
             }
           }
         }
+        .hero-image {
+          transform: translateX(10%);
+          border-top-left-radius: 13px;
+          border-bottom-left-radius: 13px;
+          aspect-ratio: 1/1;
+          width: 45%;
+        }
       }
-      .hero-image {
-        transform: translateX(10%);
-        border-top-left-radius: 13px;
-        border-bottom-left-radius: 13px;
-        aspect-ratio: 1/1;
-        width: 40%;
-      }
-    }
-    .details {
-      display: flex;
-      flex-direction: column;
-      margin-top: 100px;
-      h1 {
-        text-align: center;
-        letter-spacing: 2px;
-        font-size: 52px;
-        font-weight: 400;
-        margin: 25px;
-      }
-      .process {
+      .details {
         display: flex;
         flex-direction: column;
-        padding: 0px 50px;
-
+        margin-top: 100px;
         h1 {
-          text-align: start;
-          font-size: 42px;
+          text-align: center;
           letter-spacing: 2px;
+          font-size: 52px;
           font-weight: 400;
+          margin: 25px;
         }
-        .process-list {
-          list-style: none;
-          font-size: 20px;
-          letter-spacing: 2px;
+        .process {
+          display: flex;
+          flex-direction: column;
+          padding: 0px 50px;
 
-          li {
-            margin: 15px 45px;
+          h1 {
+            text-align: start;
+            font-size: 42px;
+            letter-spacing: 2px;
+            font-weight: 400;
+          }
+          .process-list {
+            list-style: none;
+            font-size: 20px;
+            letter-spacing: 2px;
+
+            li {
+              margin: 15px 45px;
+            }
+          }
+        }
+        .customs,
+        .support {
+          display: flex;
+          flex-direction: column;
+          padding: 0px 50px;
+          h1 {
+            text-align: start;
+            font-size: 42px;
+            letter-spacing: 2px;
+            font-weight: 400;
+          }
+          p {
+            padding: 0px 45px;
+            font-size: 20px;
+            letter-spacing: 2px;
           }
         }
       }
-      .customs,
-      .support {
+    }
+    .about {
+      width: 100%;
+      overflow: hidden;
+      .story {
         display: flex;
         flex-direction: column;
-        padding: 0px 50px;
+        align-items: center;
+        margin: 100px 50px;
         h1 {
-          text-align: start;
-          font-size: 42px;
+          font-size: 52px;
+          font-weight: 700;
           letter-spacing: 2px;
-          font-weight: 400;
         }
         p {
-          padding: 0px 45px;
-          font-size: 20px;
+          width: 80%;
           letter-spacing: 2px;
+          font-weight: 400;
+          font-size: 18px;
+          margin: 25px 0px;
+          text-align: center;
+          line-height: 25px;
+        }
+      }
+      .mission {
+        margin: 0px 50px;
+        .cards {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          .card {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            h1 {
+              font-size: 38px;
+              font-weight: 700;
+              letter-spacing: 2px;
+            }
+            p {
+              font-size: 18px;
+              font-weight: 400;
+              letter-spacing: 2px;
+              width: 80%;
+              text-align: center;
+              margin: 25px 0px;
+              line-height: 25px;
+            }
+          }
+        }
+      }
+      .message {
+        margin: 100px 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1 {
+          font-size: 38px;
+          font-weight: 700;
+          letter-spacing: 2px;
+        }
+        p {
+          font-size: 18px;
+          font-weight: 400;
+          letter-spacing: 2px;
+          width: 80%;
+          text-align: center;
+          margin: 25px 0px;
+          line-height: 25px;
+        }
+      }
+      .import {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin: 0px 50px;
+        h1 {
+          font-size: 38px;
+          font-weight: 700;
+          letter-spacing: 2px;
+        }
+        .cards {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+
+          .card {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 100px;
+            h1 {
+              font-size: 34px;
+              font-weight: 700;
+              letter-spacing: 2px;
+            }
+            p {
+              font-size: 18px;
+              font-weight: 400;
+              letter-spacing: 2px;
+              width: 80%;
+              text-align: center;
+              margin: 25px 0px;
+              line-height: 25px;
+            }
+          }
+        }
+      }
+      .cst-test {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 100px 50px;
+        overflow-x: hidden;
+        h1 {
+          font-size: 52px;
+          font-weight: 700;
+          letter-spacing: 2px;
+          margin: 50px 0px;
+        }
+        .carousel {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          overflow: hidden; /* Hide overflow so the elements outside the div aren't visible */
+          white-space: nowrap; /* Prevent wrapping of elements */
+          position: relative;
+          .carousel-inner {
+            display: inline-block;
+            animation: slide-left 10s linear infinite; /* Change duration to control speed */
+            white-space: nowrap;
+            h1 {
+              font-size: 32px;
+              font-weight: 400;
+              letter-spacing: 2px;
+              display: inline-block;
+              margin-right: 150px; /* Space between the elements */
+            }
+          }
+        }
+      }
+      .faqs {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 0px 50px;
+        h1 {
+          font-size: 52px;
+          font-weight: 700;
+          letter-spacing: 2px;
+          margin: 50px 0px;
+        }
+        .card {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          margin: 15px 0px;
+          h1 {
+            font-size: 34px;
+            padding: 5px 20px;
+            width: 100%;
+            margin: 15px 0px;
+            text-align: start;
+            cursor: pointer;
+          }
+          p {
+            padding-left: 25px;
+            font-size: 18px;
+            font-weight: 400;
+            letter-spacing: 2px;
+            width: 80%;
+            line-height: 25px;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.4s ease, opacity 0.4s ease;
+            opacity: 0;
+
+            &.show {
+              max-height: 100px; /* Adjust to fit the content size, or dynamically */
+              opacity: 1;
+            }
+          }
         }
       }
     }
+
     .footer {
       display: flex;
       flex-direction: column;
