--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -495,6 +495,7 @@ a {
   overflow: hidden; /* Hide overflow so the elements outside the div aren't visible */
   white-space: nowrap; /* Prevent wrapping of elements */
   position: relative;
+  margin: 100px 0px 50px 0px;
 }
 .app .layout .about .cst-test .carousel .carousel-inner {
   display: inline-block;
