--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -492,14 +492,14 @@ a {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  overflow: hidden; /* Hide overflow so the elements outside the div aren't visible */
-  white-space: nowrap; /* Prevent wrapping of elements */
+  overflow: hidden;
+  white-space: nowrap;
   position: relative;
   margin: 100px 0px 50px 0px;
 }
 .app .layout .about .cst-test .carousel .carousel-inner {
   display: inline-block;
-  animation: slide-left 10s linear infinite; /* Change duration to control speed */
+  animation: slide-left 10s linear infinite;
   white-space: nowrap;
 }
 .app .layout .about .cst-test .carousel .carousel-inner h1 {
@@ -507,7 +507,7 @@ a {
   font-weight: 400;
   letter-spacing: 2px;
   display: inline-block;
-  margin-right: 150px; /* Space between the elements */
+  margin-right: 150px;
 }
 .app .layout .about .faqs {
   display: flex;
@@ -548,8 +548,116 @@ a {
   opacity: 0;
 }
 .app .layout .about .faqs .card p.show {
-  max-height: 100px; /* Adjust to fit the content size, or dynamically */
+  max-height: 100px;
   opacity: 1;
+}
+.app .layout .services {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+}
+.app .layout .services .service {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 50px;
+}
+.app .layout .services .service h1 {
+  font-size: 42px;
+  font-weight: 400;
+  margin: 20px 0px;
+  letter-spacing: 2px;
+}
+.app .layout .services .service p {
+  text-align: center;
+  width: 50%;
+  margin: 50px auto;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 1.5;
+}
+.app .layout .services .contact-us {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px;
+}
+.app .layout .services .contact-us h1 {
+  text-align: center;
+  font-size: 42px;
+  font-weight: 400;
+  margin: 20px 0px;
+  letter-spacing: 2px;
+}
+.app .layout .services .contact-us p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 1.5;
+  margin-bottom: 50px;
+}
+.app .layout .services .contact-us form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  padding: 50px;
+  margin: 20px;
+}
+.app .layout .services .contact-us form .input {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+.app .layout .services .contact-us form .input label {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  margin: 5px 0px;
+}
+.app .layout .services .contact-us form .input input {
+  width: 25rem;
+  height: 3rem;
+  padding: 5px 10px;
+  font-size: 14px;
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.03);
+}
+.app .layout .services .contact-us form .input textarea {
+  width: 25rem;
+  height: 7rem;
+  padding: 5px 10px;
+  font-size: 14px;
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.03);
+  resize: vertical;
+}
+.app .layout .services .contact-us form button {
+  width: 25rem;
+  height: 3rem;
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  letter-spacing: 2px;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  font-weight: 400;
+  border-radius: 5px;
+  transition: all 0.2s ease-in;
+  margin-top: 30px;
+  cursor: pointer;
 }
 .app .layout .footer {
   display: flex;
