--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -481,20 +481,20 @@ a {
           flex-direction: row;
           align-items: center;
           justify-content: space-between;
-          overflow: hidden; /* Hide overflow so the elements outside the div aren't visible */
-          white-space: nowrap; /* Prevent wrapping of elements */
+          overflow: hidden;
+          white-space: nowrap;
           position: relative;
           margin: 100px 0px 50px 0px;
           .carousel-inner {
             display: inline-block;
-            animation: slide-left 10s linear infinite; /* Change duration to control speed */
+            animation: slide-left 10s linear infinite;
             white-space: nowrap;
             h1 {
               font-size: 32px;
               font-weight: 400;
               letter-spacing: 2px;
               display: inline-block;
-              margin-right: 150px; /* Space between the elements */
+              margin-right: 150px;
             }
           }
         }
@@ -536,9 +536,117 @@ a {
             opacity: 0;
 
             &.show {
-              max-height: 100px; /* Adjust to fit the content size, or dynamically */
+              max-height: 100px;
               opacity: 1;
             }
+          }
+        }
+      }
+    }
+    .services {
+      display: flex;
+      flex-direction: column;
+      margin-top: 100px;
+      .service {
+        display: flex;
+        flex-direction: column;
+        margin: 0px 50px;
+        h1 {
+          font-size: 42px;
+          font-weight: 400;
+          margin: 20px 0px;
+          letter-spacing: 2px;
+        }
+        p {
+          text-align: center;
+          width: 50%;
+          margin: 50px auto;
+          font-size: 20px;
+          font-weight: 400;
+          letter-spacing: 2px;
+          line-height: 1.5;
+        }
+      }
+      .contact-us {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 50px;
+        h1 {
+          text-align: center;
+          font-size: 42px;
+          font-weight: 400;
+          margin: 20px 0px;
+          letter-spacing: 2px;
+        }
+        p {
+          text-align: center;
+          font-size: 20px;
+          font-weight: 400;
+          letter-spacing: 2px;
+          line-height: 1.5;
+          margin-bottom: 50px;
+        }
+        form {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          background-color: white;
+          padding: 50px;
+          margin: 20px;
+          .input {
+            display: flex;
+            flex-direction: column;
+            margin: 10px;
+            label {
+              font-size: 16px;
+              font-weight: 400;
+              letter-spacing: 2px;
+              margin: 5px 0px;
+            }
+            input {
+              width: 25rem;
+              height: 3rem;
+              padding: 5px 10px;
+              font-size: 14px;
+              letter-spacing: 1.5px;
+              font-weight: 400;
+              border: none;
+              outline: none;
+              border: 2px solid rgba(0, 0, 0, 0.3);
+              border-radius: 5px;
+              background-color: rgba(0, 0, 0, 0.03);
+            }
+            textarea {
+              width: 25rem;
+              height: 7rem;
+              padding: 5px 10px;
+              font-size: 14px;
+              letter-spacing: 1.5px;
+              font-weight: 400;
+              border: none;
+              outline: none;
+              border: 2px solid rgba(0, 0, 0, 0.3);
+              border-radius: 5px;
+              background-color: rgba(0, 0, 0, 0.03);
+              resize: vertical;
+            }
+          }
+          button {
+            width: 25rem;
+            height: 3rem;
+            background-color: black;
+            color: white;
+            font-size: 20px;
+            letter-spacing: 2px;
+            border: none;
+            outline: none;
+            border: 2px solid rgba(0, 0, 0, 0.3);
+            font-weight: 400;
+            border-radius: 5px;
+            transition: all 0.2s ease-in;
+            margin-top: 30px;
+            cursor: pointer;
           }
         }
       }
